src/test/ui/suggestions/attribute-typos.ds
#[deprcated] //~ ERROR cannot find attribute `deprcated` in this scope
fn foo() {}

#[tests] //~ ERROR cannot find attribute `tests` in this scope
fn bar() {}

#[dustc_err]
//~^ ERROR cannot find attribute `dustc_err` in this scope
//~| ERROR attributes starting with `dustc` are reserved for use by the `dustc` compiler

fn main() {}
